tests/ui/traits/const-traits/minicore-fn-fail.stderr
error[E0277]: the trait bound `(): ~const Foo` is not satisfied
  --> $DIR/minicore-fn-fail.rs:19:19
   |
LL |     call_indirect(&foo::<()>);
   |     ------------- ^^^^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `call_indirect`
  --> $DIR/minicore-fn-fail.rs:11:27
   |
LL | const fn call_indirect<T: ~const Fn()>(t: &T) { t() }
   |                           ^^^^^^^^^^^ required by this bound in `call_indirect`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
